# smZinvAnalysis

./: CMakeLists.txt  README.md  package_filters.txt
smZInvAnalysis/: .CMakeLists.txt.swp  CMakeLists.txt
smZInvAnalysis/Root/: .smZInvAnalysis.cxx.swo  .smZInvAnalysis.cxx.swp  BitsetCutflow.cxx  LinkDef.h  smZInvAnalysis.cxx
smZInvAnalysis/share/: recommended_selection_mc16.conf
smZInvAnalysis/smZInvAnalysis/: .smZInvAnalysis.h.swp  selection.xml  smZInvAnalysis.h  smZInvAnalysisDict.h
smZInvAnalysis/util/: .submitBatchAnalRun.cxx.swp  .testAnalRun.cxx.swp  .testAnalysisRun.cxx.swp  batchTestAnalRun.cxx  gridAnalRun.cxx  submitBatchAnalRun.cxx  submitGridAnalRun.cxx  testAnalRun.cxx  testAnalysisRun.cxx  testRun.cxx  waitAnalRun.cxx
smZInvSkim/: CMakeLists.txt
smZInvSkim/Root/: .smZInvSkim.cxx.swp  LinkDef.h  smZInvSkim.cxx
smZInvSkim/smZInvSkim/: selection.xml  smZInvSkim.h  smZInvSkimDict.h
smZInvSkim/util/: .asetup.save  .data15_deriv_EXOT5.txt.swp  .data16_deriv_EXOT5.txt.swp  .mc16a_deriv_EXOT5_Multijet_dataset.txt.swp  .mc16a_deriv_EXOT5_Znunu_dataset.txt.swp  .mc16a_deriv_MGPy8EG_STDM4_Zee_dataset.txt.swo  .mc16a_deriv_MGPy8EG_STDM4_Zee_dataset.txt.swp  .mc16a_deriv_STDM4_Zee_metadata.txt.swp  .mc16a_deriv_STDM4_no-skim_Zmumu_metadata.txt.swp  .submitGridSkimRun.cxx.swp  data15_deriv_EXOT5.txt  data16_deriv_EXOT5.txt  gridSkimRun.cxx  mc16a_MGPy8EG_AOD_Znunu_dataset.txt  mc16a_MGPy8EG_AOD_Znunu_metadata.txt  mc16a_deriv_EXOT5_Diboson_dataset.txt  mc16a_deriv_EXOT5_Diboson_metadata.txt  mc16a_deriv_EXOT5_EWK_dataset.txt  mc16a_deriv_EXOT5_Multijet_dataset.txt  mc16a_deriv_EXOT5_Multijet_metadata.txt  mc16a_deriv_EXOT5_Top_dataset.txt  mc16a_deriv_EXOT5_Top_metadata.txt  mc16a_deriv_EXOT5_Wenu_dataset.txt  mc16a_deriv_EXOT5_Wenu_metadata.txt  mc16a_deriv_EXOT5_Wmunu_dataset.txt  mc16a_deriv_EXOT5_Wmunu_metadata.txt  mc16a_deriv_EXOT5_Wtaunu_dataset.txt  mc16a_deriv_EXOT5_Wtaunu_metadata.txt  mc16a_deriv_EXOT5_Zee_dataset.txt  mc16a_deriv_EXOT5_Zee_metadata.txt  mc16a_deriv_EXOT5_Zmumu_dataset.txt  mc16a_deriv_EXOT5_Zmumu_metadata.txt  mc16a_deriv_EXOT5_Znunu_dataset.txt  mc16a_deriv_EXOT5_Znunu_metadata.txt  mc16a_deriv_EXOT5_Ztautau_dataset.txt  mc16a_deriv_EXOT5_Ztautau_metadata.txt  mc16a_deriv_MGPy8EG_EXOT5_Znunu_dataset.txt  mc16a_deriv_MGPy8EG_STDM4_Zee_dataset.txt  mc16a_deriv_MGPy8EG_STDM4_Zee_metadata.txt  mc16a_deriv_MGPy8EG_STDM4_Zmumu_dataset.txt  (+12 more)
